Bug 262730 - Window in other activity will not focused after actvity switched.
Summary: Window in other activity will not focused after actvity switched.
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: activities (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-10 08:46 UTC by Weng Xuetian
Modified: 2011-01-12 19:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Weng Xuetian 2011-01-10 08:46:05 UTC
Version:           unspecified (using KDE 4.5.95) 
OS:                Linux

I use two actvities and found it's annoying after switch activity, the window in previous activity is still being focused. I might use some hotkey immediately, but it will be capture by another window.

Reproducible: Didn't try

Steps to Reproduce:
1. Create two activities
2. open one window per activity.
3. switch activity

Actual Results:  
After switch activity, the window in previous activity will still be focused and catch hotkeys.

Expected Results:  
Window in another activity will be focoused .
Comment 1 Weng Xuetian 2011-01-10 08:46:58 UTC
Sorry, forgot to choose reproducible, it happens everytime.
Comment 2 Chani 2011-01-10 09:05:38 UTC
ahh, this. I've been avoiding this for a while. :/ the code involved is rather scary.

I'll try and talk myself into looking into it next week. :)

note: this bug actually belongs to kwin. I ought to create an activities component over there so that I can reassign it...
Comment 3 Hans-Rudi Denzler 2011-01-10 17:25:05 UTC
Duplicate of Bug 262421 ?

Alt + Tab and Meta + Tab should behave similar, n'est-ce pas ?
Comment 4 Chani 2011-01-12 19:10:18 UTC
SVN commit 1214045 by chani:

improve stack & focuschain activity checks

BUG: 262730

 M  +1 -1      layers.cpp  
 M  +2 -2      tabbox.cpp  
 M  +1 -1      useractions.cpp  
 M  +7 -7      workspace.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1214045
Comment 5 Chani 2011-01-12 19:12:30 UTC
SVN commit 1214046 by chani:

backport r1214045: improve stack & focuschain activity checks
CCBUG: 262730


 M  +1 -1      layers.cpp  
 M  +2 -2      tabbox.cpp  
 M  +1 -1      useractions.cpp  
 M  +7 -7      workspace.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1214046