improve stack & focuschain activity checks

BUG: 262730

svn path=/trunk/KDE/kdebase/workspace/; revision=1214045